--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ python:
 
 # command to install dependencies
 install:
-  - "pip install Flask --use-mirrors"
+  - "pip install -r requirements.txt --use-mirrors"
 
 # command to run tests
 script:
